--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "android": "expo start --android"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.0",
+    "@react-navigation/native-stack": "^6.9.5",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
+    "npm": "^9.2.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-router-native": "^6.4.5"
   },
   "devDependencies": {
