--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "expo": "~47.0.8",
+    "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
     "npm": "^9.2.0",
