--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "android": "expo start --android"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
+    "@react-navigation/stack": "^6.3.8",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
     "expo": "~47.0.8",
     "expo-linear-gradient": "^12.0.1",
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
     "npm": "^9.2.0",
     "react": "18.1.0",
+    "react-hook-form": "^7.40.0",
     "react-native": "0.70.5",
+    "react-native-material-cards": "^1.0.16",
+    "react-native-paper": "^5.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-redux": "^8.0.5",
     "react-router-native": "^6.4.5"
   },
   "devDependencies": {
